<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/record_environment"
        android:title="@string/record_environment"
        app:showAsAction="always"
        android:icon="@drawable/ic_accuracy"/>

    <item
        android:id="@+id/load_test_env"
        android:title="@string/test_env"
        app:showAsAction="always"
        android:icon="@drawable/ic_random_position"/>

    <item
        android:id="@+id/offline_map"
        android:title="@string/offline_download"
        app:showAsAction="always"
        android:icon="@drawable/ic_map_type"/>

    <item
        android:id="@+id/get_favourite"
        android:title="@string/favourites"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_favourite_list"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_settings_24"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_info_24"/>



</menu>